Config file according to the default

--- a/os-mirror/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
+++ b/os-mirror/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
@@ -7,7 +7,7 @@
 # defined.
 HOME			= .
 RANDFILE		= $ENV::HOME/.rnd
-CEDAR_HOME              = $ENV::CEDAR_HOME
+CEDAR_HOME      = $ENV::CEDAR_HOME
 
 # Extra OBJECT IDENTIFIER info:
 #oid_file		= $ENV::HOME/.oid
@@ -40,7 +40,7 @@ default_ca	= CA_default		# The default ca section
 ####################################################################
 [ CA_default ]
 
-dir		= $CEDAR_HOME/CEDAR_CA		# Where everything is kept
+dir         = $CEDAR_HOME/CEDAR_CA  # Where everything is kept
 certs		= $dir/certs		# Where the issued certs are kept
 crl_dir		= $dir/crl		# Where the issued crl are kept
 database	= $dir/index.txt	# database index file.
@@ -71,9 +71,9 @@ cert_opt 	= ca_default		# Certificate field options
 # crlnumber must also be commented out to leave a V1 CRL.
 # crl_extensions	= crl_ext
 
-default_days	= 824			# how long to certify for
+default_days= 824                   # how long to certify for
 default_crl_days= 30			# how long before next CRL
-default_md	= sha256		# use public key default MD
+default_md  = sha256                # use public key default MD
 preserve	= no			# keep passed DN ordering
 
 # A few difference way of specifying how similar the request should look
@@ -94,21 +94,21 @@ emailAddress		= optional
 # At this point in time, you must list all acceptable 'object'
 # types.
 [ policy_anything ]
-countryName				= optional
-stateOrProvinceName		= optional
-localityName			= optional
-organizationName		= optional
+countryName		= optional
+stateOrProvinceName	= optional
+localityName		= optional
+organizationName	= optional
 organizationalUnitName	= optional
-commonName				= supplied
-emailAddress			= optional
+commonName		= supplied
+emailAddress		= optional
 
 ####################################################################
 [ req ]
 default_bits		= 2048
 default_keyfile 	= privkey.pem
 distinguished_name	= req_distinguished_name
-attributes			= req_attributes
-x509_extensions		= v3_ca	# The extentions to add to the self signed cert
+attributes		= req_attributes
+x509_extensions	= v3_ca	# The extentions to add to the self signed cert
 
 # Passwords for private keys if not present they will be prompted for
 # input_password = secret
@@ -123,39 +123,37 @@ x509_extensions		= v3_ca	# The extentions to add to the self signed cert
 # WARNING: ancient versions of Netscape crash on BMPStrings or UTF8Strings.
 string_mask = utf8only
 
-# req_extensions = v3_req # The extensions to add to a certificate request
-
-req_extensions				= v3_req
+req_extensions = v3_req # The extensions to add to a certificate request
 
 [ req_distinguished_name ]
-countryName					= Country Name (2 letter code)
-countryName_default			= US
-countryName_min				= 2
-countryName_max				= 2
+countryName			= Country Name (2 letter code)
+countryName_default     = US
+countryName_min			= 2
+countryName_max			= 2
 
-stateOrProvinceName			= State or Province Name (full name)
-stateOrProvinceName_default	= California
+stateOrProvinceName		= State or Province Name (full name)
+stateOrProvinceName_default = CA
 
-localityName				= Locality Name (eg, city)
-localityName_default		= Stanford
+localityName			= Locality Name (eg, city)
+localityName_default    = Stanford
 
-0.organizationName			= Organization Name (eg, company)
-0.organizationName_default	= BMIR
+0.organizationName		= Organization Name (eg, company)
+0.organizationName_default  = BMIR
 
 # we can do this but it is not needed normally :-)
-#1.organizationName			= Second Organization Name (eg, company)
+#1.organizationName		= Second Organization Name (eg, company)
 #1.organizationName_default	= World Wide Web Pty Ltd
 
-organizationalUnitName			= Organizational Unit Name (eg, section)
-organizationalUnitName_default	= CEDAR
+organizationalUnitName		= Organizational Unit Name (eg, section)
+organizationalUnitName_default  = CEDAR
 
-commonName					= Common Name (e.g. server FQDN or YOUR name)
-commonName_max				= 64
-commonName_default			= auth.metadatacenter.orgx
+commonName			= Common Name (e.g. server FQDN or YOUR name)
+commonName_max			= 64
+#commonName_default      = metadatacenter.orgx
 
-emailAddress				= Email Address
-emailAddress_max			= 64
-emailAddress_default		= metadatacenter@gmail.com
+emailAddress			= Email Address
+emailAddress_max		= 64
+emailAddress_default    = metadatacenter@gmail.com
 
 # SET-ex3			= SET extension number 3
 
@@ -226,8 +224,8 @@ authorityKeyIdentifier=keyid,issuer
 
 basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
-
 subjectAltName = @alt_names
+
 [alt_names]
 DNS.1   = artifact.metadatacenter.orgx
 DNS.2   = auth.metadatacenter.orgx
