--- a/os-mirror/usr/local/etc/nginx/cedar/config-cedar-global.inc.conf
+++ b/os-mirror/usr/local/etc/nginx/cedar/config-cedar-global.inc.conf
@@ -1,12 +1,15 @@
-error_log               /Users/cedar-dev/CEDAR/log/nginx/nginx-error.log;
-
-proxy_http_version      1.1; #this is essential for chunked responses
-proxy_buffering         off;
-proxy_set_header        X-Real-IP $remote_addr;
-proxy_set_header        X-Scheme $scheme;
-proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header        Host $http_host;
-proxy_intercept_errors  on;
+error_log                       /Users/cedar-dev/CEDAR/log/nginx/nginx-error.log;
+proxy_http_version              1.1; #this is essential for chunked responses
+proxy_set_header                X-Real-IP $remote_addr;
+proxy_set_header                X-Forwarded-Proto $scheme;
+proxy_set_header                X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header                Host $host;
+proxy_intercept_errors          on;
+proxy_buffering                 on;
+proxy_buffer_size               128k;
+proxy_buffers                   4 256k;
+proxy_busy_buffers_size         256k;
+client_max_body_size            4m;
 
 map $status $loggable {
     ~^[3]   0;
