--- a/os-mirror/development-macos/usr/local/etc/nginx/nginx.conf
+++ b/os-mirror/development-macos/usr/local/etc/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
    keepalive_timeout   65;
 
    include             cedar/module-geo.inc.conf;
-   include             cedar/config-cedar-main.inc.conf;
+   include             cedar/config-cedar-global.inc.conf;
    include             cedar/server-*.inc.conf;
    include             cedar/frontend-*.inc.conf;
 }
