--- a/os-mirror/development-macos/usr/local/etc/nginx/cedar/frontend-component.inc.conf
+++ b/os-mirror/development-macos/usr/local/etc/nginx/cedar/frontend-component.inc.conf
@@ -8,6 +8,8 @@ server {
     listen          443 ssl;
     server_name     component.metadatacenter.orgx;
     include         cedar/include-ssl.conf;
+    add_header      'Access-Control-Allow-Origin' '*';
+    add_header      'Access-Control-Allow-Methods' 'GET';
     location / {
                     alias /Users/cedar-dev/CEDAR/cedar-component-distribution/;
     }
