os mirror updated with new host

--- a/os-mirror/development-macos/usr/local/etc/nginx/nginx.conf
+++ b/os-mirror/development-macos/usr/local/etc/nginx/nginx.conf
@@ -12,8 +12,11 @@ http {
 
    keepalive_timeout   65;
 
+   merge_slashes      off;
+
    include             cedar/module-geo.inc.conf;
    include             cedar/config-cedar-global.inc.conf;
    include             cedar/server-*.inc.conf;
    include             cedar/frontend-*.inc.conf;
+   include             cedar/proxy-*.inc.conf;
 }
