--- a/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
+++ b/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
@@ -245,6 +245,9 @@ DNS.15  = terminology.metadatacenter.orgx
 DNS.16  = user.metadatacenter.orgx
 DNS.17  = valuerecommender.metadatacenter.orgx
 DNS.18  = worker.metadatacenter.orgx
+DNS.19  = demo.cee.metadatacenter.orgx
+DNS.20  = demo-dist.cee.metadatacenter.orgx
+DNS.21  = api.cee.metadatacenter.orgx
 
 [ v3_ca ]
 
