--- a/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
+++ b/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/openssl-san.cnf
@@ -247,7 +247,9 @@ DNS.17  = valuerecommender.metadatacenter.orgx
 DNS.18  = worker.metadatacenter.orgx
 DNS.19  = demo.cee.metadatacenter.orgx
 DNS.20  = demo-dist.cee.metadatacenter.orgx
-DNS.21  = api.cee.metadatacenter.orgx
+DNS.21  = docs.cee.metadatacenter.orgx
+DNS.22  = docs-dist.cee.metadatacenter.orgx
+DNS.23  = api-php.cee.metadatacenter.orgx
 
 [ v3_ca ]
 
