SANcert for CEE Docs

--- a/os-mirror/development-macos/usr/local/etc/nginx/cedar/frontend-docs-cee-angular-dist.inc.conf
+++ b/os-mirror/development-macos/usr/local/etc/nginx/cedar/frontend-docs-cee-angular-dist.inc.conf
@@ -4,6 +4,7 @@ server {
     include         cedar/include-ssl.conf;
     location / {
         root        /Users/cedar-dev/CEDAR/cedar-cee-docs-angular-dist;
+        try_files   $uri $uri/ /index.html?$args;
     }
     error_log       /Users/cedar-dev/CEDAR/log/cedar-cee-docs-angular-dist/nginx-error.log warn;
     access_log      /Users/cedar-dev/CEDAR/log/cedar-cee-docs-angular-dist/nginx-access.log combined if=$loggable;
