--- a/os-mirror/development-macos/opt/homebrew/etc/opensearch/opensearch.default.yml
+++ b/os-mirror/development-macos/opt/homebrew/etc/opensearch/opensearch.default.yml
@@ -1,6 +1,6 @@
-# ======================== Elasticsearch Configuration =========================
+# ======================== OpenSearch Configuration =========================
 #
-# NOTE: Elasticsearch comes with reasonable defaults for most settings.
+# NOTE: OpenSearch comes with reasonable defaults for most settings.
 #       Before you set out to tweak and tune the configuration, make sure you
 #       understand what are you trying to accomplish and the consequences.
 #
@@ -8,13 +8,13 @@
 # the most important settings you may want to configure for a production cluster.
 #
 # Please consult the documentation for further information on configuration options:
-# https://www.elastic.co/guide/en/elasticsearch/reference/index.html
+# https://www.opensearch.org
 #
 # ---------------------------------- Cluster -----------------------------------
 #
 # Use a descriptive name for your cluster:
 #
-cluster.name: opensearch_brew
+cluster.name: opensearch_homebrew
 #
 # ------------------------------------ Node ------------------------------------
 #
@@ -30,11 +30,11 @@ cluster.name: opensearch_brew
 #
 # Path to directory where to store the data (separate multiple locations by comma):
 #
-path.data: /usr/local/var/lib/opensearch/
+path.data: /opt/homebrew/var/lib/opensearch/
 #
 # Path to log files:
 #
-path.logs: /usr/local/var/log/opensearch/
+path.logs: /opt/homebrew/var/log/opensearch/
 #
 # ----------------------------------- Memory -----------------------------------
 #
@@ -46,7 +46,7 @@ path.logs: /usr/local/var/log/opensearch/
 # on the system and that the owner of the process is allowed to use this
 # limit.
 #
-# Elasticsearch performs poorly when the system is swapping the memory.
+# OpenSearch performs poorly when the system is swapping the memory.
 #
 # ---------------------------------- Network -----------------------------------
 #
@@ -62,16 +62,16 @@ path.logs: /usr/local/var/log/opensearch/
 #
 # --------------------------------- Discovery ----------------------------------
 #
-# Pass an initial list of hosts to perform discovery when new node is started:
+# Pass an initial list of hosts to perform discovery when this node is started:
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 #
-#discovery.zen.ping.unicast.hosts: ["host1", "host2"]
+#discovery.seed_hosts: ["host1", "host2"]
 #
-# Prevent the "split brain" by configuring the majority of nodes (total number of master-eligible nodes / 2 + 1):
+# Bootstrap the cluster using an initial set of cluster-manager-eligible nodes:
 #
-#discovery.zen.minimum_master_nodes: 
+#cluster.initial_cluster_manager_nodes: ["node-1", "node-2"]
 #
-# For more information, consult the zen discovery module documentation.
+# For more information, consult the discovery and cluster formation module documentation.
 #
 # ---------------------------------- Gateway -----------------------------------
 #
