Update for new mysql, kk

--- a/os-mirror/development-macos/CEDAR_HOME/keycloak/conf/keycloak.conf
+++ b/os-mirror/development-macos/CEDAR_HOME/keycloak/conf/keycloak.conf
@@ -4,8 +4,8 @@
 
 # The database vendor.
 db=mysql
-db-url-host=localhost
-db-url-database=cedar_keycloak
+db-url-host=${CEDAR_KEYCLOAK_MYSQL_HOST}
+db-url-database=${CEDAR_KEYCLOAK_MYSQL_DB}
 db-username=${CEDAR_KEYCLOAK_MYSQL_USER}
 db-password=${CEDAR_KEYCLOAK_MYSQL_PASSWORD}
 
