Internals renamed into Monitor

--- a/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/configs/openssl--san.cnf
+++ b/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/configs/openssl--san.cnf
@@ -245,9 +245,9 @@ DNS.6   = demo.cee.metadatacenter.orgx
 DNS.7   = docs.cee.metadatacenter.orgx
 DNS.8   = group.metadatacenter.orgx
 DNS.9   = impex.metadatacenter.orgx
-DNS.10  = internals.metadatacenter.orgx
-DNS.11  = internalsview.metadatacenter.orgx
-DNS.12  = messaging.metadatacenter.orgx
+DNS.10  = messaging.metadatacenter.orgx
+DNS.11  = monitor.metadatacenter.orgx
+DNS.12  = monitoring.metadatacenter.orgx
 DNS.13  = open.metadatacenter.orgx
 DNS.14  = openview.metadatacenter.orgx
 DNS.15  = repo.metadatacenter.orgx
