--- a/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/configs/openssl-monitoring.cnf
+++ b/os-mirror/development-macos/CEDAR_HOME/CEDAR_CA/configs/openssl-monitoring.cnf
@@ -158,7 +158,7 @@ organizationalUnitName_default  = CEDAR
 
 commonName			= Common Name (e.g. server FQDN or YOUR name)
 commonName_max			= 64
-commonName_default      = internalsview.metadatacenter.orgx
+commonName_default      = monitoring.metadatacenter.orgx
 
 emailAddress			= Email Address
 emailAddress_max		= 64
@@ -236,7 +236,7 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1   = internalsview.metadatacenter.orgx
+DNS.1   = monitoring.metadatacenter.orgx
 
 [ v3_ca ]
 
