--- a/os-mirror/virtualbox-ubuntu/etc/nginx/cedar/server-impex.inc.conf
+++ b/os-mirror/virtualbox-ubuntu/etc/nginx/cedar/server-impex.inc.conf
@@ -13,7 +13,7 @@ server {
     server_name     impex.metadatacenter.orgx;
     include         cedar/include-ssl.conf;
     location / {
-        proxy_pass  http://cedar-backend-internals;
+        proxy_pass  http://cedar-backend-impex;
     }
     error_log       /home/cedar/CEDAR/log/cedar-impex-server/nginx-error.log warn;
     access_log      /home/cedar/CEDAR/log/cedar-impex-server/nginx-access.log combined if=$loggable;
