Fix domain name

--- a/os-mirror/development-macos/opt/homebrew/etc/nginx/cedar/domains/frontend-bridging.inc.conf
+++ b/os-mirror/development-macos/opt/homebrew/etc/nginx/cedar/domains/frontend-bridging.inc.conf
@@ -10,7 +10,7 @@ server {
 
 server {
     listen              443 ssl;
-    server_name         cedar.metadatacenter.orgx;
+    server_name         bridging.metadatacenter.orgx;
     ssl_certificate     /opt/homebrew/etc/nginx/cedar/ssl/bridging.metadatacenter.orgx/bridging.metadatacenter.orgx.crt;
     ssl_certificate_key /opt/homebrew/etc/nginx/cedar/ssl/bridging.metadatacenter.orgx/bridging.metadatacenter.orgx.key;
     location / {
